--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>NoPixel Territory Map</title>
+	<title>Atlantic - Territórios</title>
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="fontawesome/css/font-awesome.css">
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<header>
-		<p class="left" style="padding-top: 5px;"><a href="">NoPixel Territory Map</a></p>
+		<p class="left" style="padding-top: 5px;"><a href="">Atlantic - Territórios</a></p>
 		<ul class="right">
 			<div class="dropdown">
 				<button class="btn btn-primary" id="toggleruler" onclick="toggleRuler();$(this).css('display', 'none');">Add Distance Ruler</button>
@@ -58,7 +58,7 @@
 					{{#each types}}
 						<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="{{name}}"> <img src="{{assetsUrl}}icons/{{icon}}"> {{name}}</label> <a href="#" class="details" data-name="{{name}}"><i class="icon-chevron-sign-right"></i></a> <!--<a href="#tour" class="tt"></a>--></li>
 					{{/each}}
-					<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="labels"> <img src="{{assetsUrl}}icons/General/wall-breach.png"> Labels</label> <a href="#" class="details" data-name="Labels"></a> <!--<a href="#tour" class="tt"></a>--></li>
+					<li><label><input type="checkbox" {{#if enabled}}checked{{/if}} value="labels"> <img src="{{assetsUrl}}icons/General/wall-breach.png"> Nomes</label> <a href="#" class="details" data-name="Labels"></a> <!--<a href="#tour" class="tt"></a>--></li>
 					
 				</ul>
 			</section>
